--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "lodash": "^4.17.19",
         "merge": "^2.1.1",
         "moment": "^2.29.1",
+        "notiflix": "^3.2.6",
         "notistack": "^2.0.3",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
@@ -36,6 +37,7 @@
         "react-scripts": "^4.0.3",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.0",
+        "remask": "^1.1.0",
         "shortid": "^2.2.16",
         "yup": "^0.32.11"
     },
