--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,6 @@
         "echarts": "^5.2.2",
         "echarts-for-react": "^3.0.2",
         "formik": "^2.2.9",
-        "jsonwebtoken": "^8.5.1",
-        "jwt-decode": "^3.1.2",
         "lodash": "^4.17.19",
         "merge": "^2.1.1",
         "moment": "^2.29.1",
@@ -32,17 +30,14 @@
         "react-icons": "^4.8.0",
         "react-material-ui-form-validator": "^3.0.0",
         "react-perfect-scrollbar": "^1.5.8",
-        "react-redux": "^7.2.6",
         "react-router-dom": "^6.0.2",
         "react-scripts": "^4.0.3",
-        "redux": "^4.1.2",
-        "redux-thunk": "^2.4.0",
         "remask": "^1.1.0",
         "shortid": "^2.2.16",
         "yup": "^0.32.11"
     },
     "scripts": {
-        "start": "react-scripts --openssl-legacy-provider start PORT=3001",
+        "start": "react-scripts --openssl-legacy-provider start port=3001",
         "build": "GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
