--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
     "name": "matx-react",
     "version": "3.0.0",
+    "homepage": "http://topam.app",
     "private": true,
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.19.2",
