--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
         "yup": "^0.32.11"
     },
     "scripts": {
-        "start": "react-scripts --openssl-legacy-provider start port=3001",
+        "start": "react-scripts start port=3001",
         "build": "GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
