--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     },
     "scripts": {
         "start": "react-scripts --openssl-legacy-provider start port=3001",
-        "build": "react-scripts build",
+        "build": "react-scripts --openssl-legacy-provider build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "ghp": "react-scripts build && gh-pages -d build"
